--- a/eisvogel.latex
+++ b/eisvogel.latex
@@ -397,6 +397,7 @@ $if(numbersections)$
 \setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
 $else$
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+\newcounter{none}
 $endif$
 $if(beamer)$
 $else$
